@@ -22,7 +22,7 @@ PASS_CHANGE_TRIES 3
 PASS_MAX_DAYS 180
 PASS_MIN_DAYS 1
 PASS_WARN_AGE 14
-PASS_MIN_LEN 14
+PASS_MIN_LEN 15
 PORTTIME_CHECKS_ENAB yes
 QUOTAS_ENAB yes
 SHA_CRYPT_MIN_ROUNDS 5000
