@@ -1,1 +1,12 @@
-type Useradd::CryptStyle = Array[Enum['des','blowfish','sha256','sha512']]
+type Useradd::CryptStyle = Enum[
+  'BLOWFISH',
+  'DES',
+  'MD5',
+  'SHA256',
+  'SHA512',
+  'blowfish',
+  'des',
+  'md5',
+  'sha256',
+  'sha512'
+]
